fixed horizontal scrollbar

--- a/popup/global.css
+++ b/popup/global.css
@@ -39,17 +39,19 @@
   display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .app-container {
   width: 800px;
-  height: 600px;
+  height: 550px;
   overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* Sidebar Styles */
 .sidebar {
-  width: 250px;
+  width: 200px;
   height: 100%;
   background-color: var(--heading);
   color: var(--white);
@@ -68,8 +70,6 @@
 
 .logo img {
   width: 32px;
-  height: 32px;
-  margin-right: 10px;
 }
 
 .logo h1 {
@@ -246,6 +246,11 @@ h3 {
 .sidebar-title {
   transition: opacity 0.25s ease-in-out;
   white-space: nowrap;
+  font-size: 20px !important;
+  margin: 0;
+  font-family: 'Regular-Medium';
+  text-align: left;
+  color: var(--white);
 }
 
 .app-container.minimized .sidebar-title {
